# ia

./: ia.sh
Practico0/: config.sh  guia_de_instalacion.md  practico0.ipynb  pyproject.toml  python_syntax.ipynb
Practico1/: input_agent.py  pyproject.toml  river_crossing.ipynb  river_crossing_env.py  river_crossing_utils.py
Practico1/.ipynb_checkpoints/: river_crossing-checkpoint.ipynb
Practico2/: agent_reflex.py  aire_acondicionado.ipynb  pyproject.toml  room.py
Practico3/: .gitignore  a_star_agent.py  frozen_lake.ipynb  frozen_lake_env.py  main.py  model.py  priority_queue.py  pyproject.toml  ucs_agent.py
Practico4/: a_star_agent.py  agent.py  eight_puzzle.ipynb  eight_puzzle.py  model.py  priority_queue.py  pyproject.toml  search_agent.py
Practico5/: maze.txt  mdp_model.py  pyproject.toml  volcano_crossing.ipynb  volcano_crossing_env.py
