[tool.poetry]
name = "practico2"
version = "0.1.0"
description = "Practico 2 para la clase de Inteligencia Artificial en Universidad ORT Uruguay"
authors = ["AlejoGarat"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
gymnasium = "^0.29.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.3.2"

[tool.poetry.group.dev.dependencies]
notebook = "^7.2.1"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
